--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
 
     //materiel design
     implementation "com.google.android.material:material:1.3.0"
+
+    //Google play services
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
