--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     //Google play services
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
