generate QR codes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //QR Generator
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 }
