--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,16 @@ dependencies {
 
     //QR Generator
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+
+    //CameraX
+    def camerax_version = "1.0.0-beta07"
+    // CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    // CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+
+    //ML Kit
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
 }
