--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,8 @@ dependencies {
 
     //ML Kit
     implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 }
